@@ -33,6 +33,11 @@ o  The constructor C_Polyhedron(const NNC_Polyhedron& y) no longer
    it constructs a C_Polyhedron representing the topological closure
    of `y'.
 
+o  Functions in the C interface that compute (space) dimensions
+   no longer return their result.  The caller is now required to pass,
+   as an extra argument, a pointer to a memory area where the result
+   will be written.
+
 o  Now `make check' runs a number of tests with `ppl_lcdd', comparing
    the results to expected ones.
 
